remove encoding error

--- a/生物等效性研究的统计学指导原则(征求意见稿).md
+++ b/生物等效性研究的统计学指导原则(征求意见稿).md
@@ -124,7 +124,9 @@ Set，简称SS）。
 
 备择假设*H*1：
 
-其中*μT*为受试制剂对数变换后药代参数总体均数，*μR*为参比制剂对数变换后药代参数总体均数，*θ*为生物等效性界值。在设定的检验水准下，若拒绝原假设*H*0，则表明生物等效。一般称为平均生物等效标准，该标准等价于-*θ≤μT-μR≤θ*。通常设定*θ*=ln(1.25)，-*θ*=ln(0.8)。该标准同时适用于Cmax和AUC。
+其中*μT*为受试制剂对数变换后药代参数总体均数，*μR*为参比制剂对数变换后药代参数总体均数，*θ*为生物等效性界值。在设定的检验水准下，若拒绝原假设*H*0，则表明生物等效。一般称为平均(*μT-μR)
+2≤ θ2*生物等效标准，该标准等价于-*θ≤μT-μR≤θ*。
+通常设定*θ*=ln(1.25)，-*θ*=ln(0.8)。该标准同时适用于Cmax和AUC。
 
 对Tmax的分析通常采用非参数方法进行差异性检验。
 
@@ -132,9 +134,13 @@ Set，简称SS）。
 
 1.概述
 
-对于上文提到的生物等效性标准，通常是构建*μT*-*μR*的双侧90%置信区间，若此置信区间落在区间$$\lbrack
--
-\theta,\theta\rbrack$$内，则可推断受试制剂和参比制剂满足生物等效。此方法等价于在0.05的检验水准下进行双单侧假设检验。应根据不同的试验设计选择恰当的置信区间计算方法。计算出*μT*-*μR*的双侧90%置信区间后，可通过逆对数变换（指数变换）得到受试制剂和参比制剂原始数据的GMR的双侧90%置信区间。
+对于上文提到的生物等效性标准，通常是构建*μT-μR*的双侧90%置信区间若此置信
+
+区间落在区间[-*θ*, *θ*]内，则可推断受试制剂和参比制剂满足生物等效。
+
+此方法等价于在0.05的检验水准下进行双单侧假设检验。应根据不同的试验设计选择恰当的置信区间计算方法。计算出*μT-μR*的双侧
+90%置信区间后， 可通过
+逆对数变换（指数变换）得到受试制剂和参比制剂原始数据的GMR的双侧90%置信区间。
 
 2.交叉设计
 
